// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useWhyChange stays quiet if updates never happen 1`] = `
<DocumentFragment>
  Loading...
</DocumentFragment>
`;

exports[`useWhyChange stays quiet if updates never happen 2`] = `
<DocumentFragment>
  hi
</DocumentFragment>
`;
